# mail-organizer

./: .gitignore  Dockerfile  README.md  config.json  main.py  production_instructions.txt  pyproject.toml  requirements.txt  scheduler_instructions.txt  test_instructions.txt
scripts/: debug_env.py  debug_hf_models.py  debug_qwen.py  test_webhook.py  verify_scheduler.py
src/: auth.py  graph.py  llm.py  server.py
tests/: test_auth.py  test_graph.py  test_graph_todo.py  test_idempotency.py  test_llm.py  test_main_logic.py  test_new_flow.py  test_renew.py
